# rusty-card-games

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: cards.rs  lib.rs
