[package]
name = "rusty-card-games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
